# trading1

./: .pre-commit-config.yaml  AUDIT_REPORT.md  CLAUDE.md  LANCER_BOT.bat  ORACLE_V2_MASTER_PROMPT.md  ORACLE_v2_context.md  ORACLE_v2_initial_prompt.md  OUVRIR_OBSIDIAN.bat  OUVRIR_VSCODE.bat  SETUP_ORACLE.bat  WORKFLOW.md  package-lock.json  package.json  pyproject.toml  rapport_simulation_2024.html
.claude/: settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.claude/hooks/: notify.mjs  post-edit.mjs  pre-bash.mjs  pre-edit.mjs  session-end.mjs  session-start.mjs
.github/workflows/: test.yml
.obsidian/: graph.json  workspace.json
oracle_v2/: .env  .env.example  LANCER.bat  ML_SYSTEM_INDEX.md  __init__.py  config.py  connector_health.py  cycle_manager.py  events.py  exceptions.py  execution_engine.py  main.py  metrics.py  oracle_system.py  paper_monitor.py  requirements.txt
oracle_v2/backtest/: engine.py
oracle_v2/brain/: __init__.py  association_cortex.py  brainstem.py  feature_layer.py  narrator.py  narrator_llm.py  narrator_memory.py  parliament.py  predictive_layer.py  safety_kernel.py  sensory_layer.py  working_memory.py
oracle_v2/connectors/: __init__.py  base_connector.py  binance_connector.py  capital_connector.py  polymarket_connector.py
oracle_v2/db/: __init__.py  repositories.py  schema.py
oracle_v2/features/: README.md  __init__.py  entropy.py  extreme_value.py  graph_signal.py  topology.py
oracle_v2/integrations/: __init__.py  hermes_client.py  multica_tracker.py
oracle_v2/ml/: __init__.py  base_model.py  s0_regime_hmm.py  s11_brier_calibrator.py  s2_minsky_lstm.py  s3_narrative_xgb.py  s5_behavioral_xgb.py  s7_volatility_evt.py  s8_causal_tft.py  s9_personal_rl.py
oracle_v2/parliament/: __init__.py  agents.py  council.py  debate_logger.py  ml_council.py
oracle_v2/strates/: __init__.py  amd_strate.py  base_strate.py  cognitive_strates.py  latency_arb_strate.py  macro_strate.py  momentum_strate.py  polymarket_strate.py  strate_0_epistemic.py  strate_2_minsky.py  strate_4_reflexivity.py  strate_5_behavioral_bias.py  strate_7_fractal_risk.py  structure_strate.py  twitter_sentiment_strate.py
oracle_v2/telegram/: __init__.py  alerts.py  bot.py  formatter.py  handlers.py
oracle_v2/tests/: __init__.py  conftest.py  test_amd_strate.py  test_brainstem.py  test_brainstem_adaptive.py  test_events.py  test_execution_engine.py  test_latency_arb.py  test_metrics.py  test_ml_features.py  test_ml_system.py  test_momentum_strate.py  test_oracle_system.py  test_paper_monitor.py  test_parliament.py  test_polymarket.py  test_safety_kernel.py  test_safety_kernel_v2.py  test_structure_strate.py  test_working_memory.py
oracle_v2/training/: __init__.py  feature_builder.py  labeler.py  trainer.py  walk_forward.py
oracle_v2/ui/: __init__.py  dashboard.py  (+3 more)
tests/: conftest.py
trading_bot/: .env.example  .gitignore  CLEANUP_FIXES.md  __init__.py  config.py  exceptions.py  requirements.txt  run_demo.py  watchdog.py
(+8140 files in other folders)
